hamburger and spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -875,8 +875,8 @@ _::-webkit-full-page-media, _:future, :root .github-googleplay-button {
     }
 
     .button_container {
-        width: 5.1875em;
-        height: 3.6875em;
+        width: 3.5em;
+        height: 1.6875em;
         left: 6% !important;
     }
 
@@ -1324,6 +1324,11 @@ _::-webkit-full-page-media, _:future, :root .github-googleplay-button {
         height: 55%;
     }
 
+    #section3 h1, #section4 h1 {
+        font-size: 2.8em;
+        left: 13%;
+    }
+
     #section4 p {
         font-size: 2.7em;
     }
@@ -1346,6 +1351,7 @@ _::-webkit-full-page-media, _:future, :root .github-googleplay-button {
     .overlay nav {
         font-size: 4em;
     }
+
 }
 
 
@@ -1450,6 +1456,7 @@ _::-webkit-full-page-media, _:future, :root .github-googleplay-button {
         font-size: 4em;
     }
 
+
 }
 
 
@@ -1475,6 +1482,7 @@ _::-webkit-full-page-media, _:future, :root .github-googleplay-button {
         top: 24%!important;
         left: 9% !important;
     }
+
 
     .button_container {
         width: 2.1875em;
